<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:orientation="vertical">

    <ListView
        android:layout_marginRight="@dimen/space_small"
        android:layout_height="wrap_content"
		android:contentDescription="@string/reports"
        android:id="@android:id/list"
        style="@style/ListView"/>

</LinearLayout>
