<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html

  Contributors:
      Denis Solonenko - initial API and implementation
      Emmanuel Florent - port to Android API 11+
-->
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_V"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <FrameLayout
            android:paddingTop="@dimen/actionBarSize"
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </FrameLayout>

    <include layout="@layout/toolbar"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer"/>

</android.support.v4.widget.DrawerLayout>