...
    <string name="widget_2x1" translatable="false">Flowzr</string>
    <string name="widget_3x1" translatable="false">Flowzr</string>
    <string name="widget_4x1" translatable="false">Flowzr</string>
	<string name="backup" translatable="false">Backup</string>
	<string name="accounts">Accounts</string>
	<string name="blotter">Transactions</string>
	<string name="currencies">Currencies</string>
	<string name="categories">Categories</string>
	<string name="budgets">Budgets</string>
	<string name="projects">Projects</string>
	<string name="ok">OK</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
...
	<string name="mass_operations_clear_all">Clear all</string>			
	<string name="mass_operations_reconcile">Reconcile all</string>		
	<string name="mass_operations_delete">Delete all</string>		
	<string name="proceed">Proceed</string>	
	<string name="apply_mass_op" formatted="false">Apply \'%s\' on %d transaction(s)?</string>
	<string name="apply_mass_op_zero_count">No transactions selected…</string>
	<string name="entities">Entities</string>
	<string name="transaction_status_restored">Restored</string>	
	<string name="scheduled_transactions_restored">Scheduled transactions have been restored</string>		
	<string name="scheduled_transactions_have_been_restored">%d missed scheduled transactions have been restored. Please use Mass Operations to clear/delete them.</string>		
	<string name="restore_missed_scheduled_transactions">Restore missed schedules</string>		
	<string name="restore_missed_scheduled_transactions_summary">Missed scheduled transactions will be restored with \'Restored\' status</string>
	<string name="save_and_new">Save&amp;New</string>
	<string name="show_picture">Show \'Take picture\'</string>
	<string name="show_picture_summary">Show \'Take picture\' box</string>
	<string name="payees">Payees</string>
	<string name="report_by_payee">By Payee</string>
	<string name="report_by_payee_summary">Transactions report by payee</string>
	<string name="report_by_payee_by_period">By Payee / Period</string>
	<string name="report_by_payee_by_period_summary">Transactions report by payee and period</string>
	<string name="no_payee">No payee</string>
	<string name="report_no_payee">There is no payee available for filtering in the report.</string>
...
